# 42-Python4DataScience

Python-0/ex00/: Hello.py
Python-0/ex01/: format_ft_time.py
Python-0/ex02/: find_ft_type.py  tester.py
Python-0/ex03/: NULL_not_found.py
Python-0/ex04/: whatis.py
Python-0/ex05/: building.py
Python-0/ex06/: filterstring.py  ft_filter.py
Python-0/ex07/: sos.py
Python-0/ex08/: Loading.py
Python-0/ex09/: README.md  pyproject.toml
Python-0/ex09/src/ft_package/: __init__.py  example.py  tester.py
Python-0/ex09/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt
