[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
keywords = ["sample", "test", "package"]
license = {text = "MIT"}
requires-python = ">=3.10.0"
authors = [
    { name = "anargul", email = "anargul@42.fr" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/Clas0512/42-Python4DataScience"
